refactor(products): [1] - refactor save, upload, edit products and create groups for products

--- a/.env
+++ b/.env
@@ -6,8 +6,9 @@ DB_PASS=shoppass
 DB_NAME=store_db
 JWT_SECRET=mysecretsuperkey2025
 MINIO_ENDPOINT=http://minio:9000
-MINIO_PUBLIC_URL=http://localhost:9003/uploads
+MINIO_PUBLIC_URL=http://localhost:9002
 MINIO_ACCESS_KEY=shop
 MINIO_SECRET_KEY=securepassword123
 MINIO_REGION=us-east-1
 MINIO_BUCKET=uploads
+FRONTEND_URL=http://localhost:9000
